# plaidify

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.demo.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.yml  gunicorn.conf.py  plaidify.db  pyproject.toml  requirements-dev.txt  requirements-kms.txt  requirements.txt  run_demo.py  test_endpoints.py
.azure/: deployment-plan.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
ISSUE_TEMPLATE/: phase_6_data_strategy_intelligence.md
alembic/: env.py
connectors/: demo_bank.json  demo_saas.json  demo_site.json  demo_utility.json  greengrid_energy.json  greengrid_energy_v3.json  hydro_one.json  internal_bank.json  mock_site.json  template_connector.py  test_bank.json
deploy/: backup-cronjob.yaml
docs/: AGENTS.md  AZURE_DEPLOYMENT.md  COMPLIANCE.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  HIGH_AVAILABILITY.md  HOSTED_LINK_TELEMETRY.md  ISOLATED_ACCESS_RUNTIME.md  KMS_INTEGRATION.md  LOAD_TESTING.md  MOBILE_LINK_INTEGRATION.md  PRODUCT_PLAN.md  README.md  ROADMAP_V2.md  RUNBOOK.md  SCHEDULED_REFRESH.md  SELF_HOST.md  THREAT_MODEL.md
example_site/: server.py
examples/: langchain_agent.py  openai_agent.py
frontend/: demo.css  (+9 more)
frontend-next/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
sdk/: README.md  pyproject.toml
sdk/plaidify/: __init__.py  cli.py  client.py  config.py  exceptions.py  models.py
sdk/tests/: conftest.py  test_cli.py  test_client.py  test_exceptions.py  test_models.py  test_sync_client.py
(+233 files in other folders)
