[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plaidify"
version = "0.3.0b1"
description = "The open-source Python SDK for authenticated web data extraction — for developers and AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Meet Pandya" },
]
keywords = ["plaidify", "web-scraping", "browser-automation", "data-extraction", "sdk", "mfa", "plaid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
    "click>=8.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/meetpandya27/plaidify"
Documentation = "https://github.com/meetpandya27/plaidify#readme"
Repository = "https://github.com/meetpandya27/plaidify"
Issues = "https://github.com/meetpandya27/plaidify/issues"

[project.scripts]
plaidify = "plaidify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["plaidify"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
